Added a new table for local funds

--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -40,6 +40,7 @@
             <div class="dropdown-content">
               <a href="income-records.html">Income-Records</a>
               <a href="expenditure-records.html">Expenses-Records</a>
+              <a href="local-records.html">Local-Records</a>
               <a href="conference-records.html">Conference-Records</a>
               <a href="district-records.html">District-Records</a>
             </div>
