--- a/church1/expenditure-records.html
+++ b/church1/expenditure-records.html
@@ -113,7 +113,11 @@
                         `;
                         tableBody.appendChild(tr);
                     });
-                    $('#dataTable').DataTable();
+                    $('#dataTable').DataTable({
+                        "order": [[ 0, "desc" ]], // Order by the first column (NUM) in descending order
+                        "pageLength": 10, // Set the number of rows per page
+                        "lengthMenu": [5, 10, 25, 50, 100, 200] // Options for number of rows per page
+                    });
                 })
                 .catch(error => console.error('Error fetching data:', error))
                 .finally(() => {
