--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -14,15 +14,15 @@
     <link href="./css/style.css" rel="stylesheet">
 
 
-    <link rel="icon" type="image/icon" href="/church1/assest/images/favicon.png">
-    <link rel="stylesheet" href="/church1/assest/styles/styles.css" />
+    <link rel="icon" type="image/icon" href="../../../../church1/assest/images/favicon.png">
+    <link rel="stylesheet" href="../../../../church1/assest/styles/styles.css" />
     <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"/> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="/assest/scripts/auth.js"></script> 
+    <script src="../../../../church1/assest/scripts/auth.js"></script> 
 
 
 
@@ -49,29 +49,29 @@
           <i class="fas fa-bars"></i>
         </label>
         <a href="landing-page.html" class="logo3">Ash.North Treasury Dept.
-        <img class="sda_logo" src="/assest/images/sda_logo.png" alt="logo"></a>
+        <img class="sda_logo" src="../../../../church1/assest/images/sda_logo.png" alt="logo"></a>
         <ul>
             <li><a id="dashboard"  class="active" href="./index.html"> <i class="fa-solid fa-chart-line"></i> Dashboard</a></li>
           <li class="dropdown">
             <div id="admin-section" style="display: none;">
                 <a> <i class="fa-solid fa-bars"></i> Menu</a>
                 <div class="dropdown-content">
-                  <a href="/church1/income-book.html">Income-Book</a>
-                  <a href="/church1/full-view.html">Full View</a>
-                  <a href="/church1/expenditure-book.html">Expenditure-Book</a>
-                  <a href="/church1/cutoff.html">Cut-Off Sheet</a>
-                  <a href="/church1/denominations.html">Denominations</a>
+                  <a href="../../../../church1/income-book.html">Income-Book</a>
+                  <a href="../../../../church1/full-view.html">Full View</a>
+                  <a href="../../../../church1/expenditure-book.html">Expenditure-Book</a>
+                  <a href="../../../../church1/cutoff.html">Cut-Off Sheet</a>
+                  <a href="../../../../church1/denominations.html">Denominations</a>
                 </div>
               </div>
           </li>
           <li class="dropdown">
             <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
-              <a class="active" href="/church1/income-records.html">Income-Records</a>
-              <a href="/church1/expenditure-records.html">Expenses-Records</a>
-              <a href="/church1/local-records.html">Local-Records</a>
-              <a href="/church1/conference-records.html">Conference-Records</a>
-              <a href="/church1/district-records.html">District-Records</a>
+              <a href="../../../../church1/income-records.html">Income-Records</a>
+              <a href="../../../../church1/expenditure-records.html">Expenses-Records</a>
+              <a href="../../../../church1/local-records.html">Local-Records</a>
+              <a href="../../../../church1/conference-records.html">Conference-Records</a>
+              <a href="../../../../church1/district-records.html">District-Records</a>
             </div>
           </li>
           <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
@@ -896,6 +896,8 @@
     <!--**********************************
         Scripts
     ***********************************-->
+    <script src="../../../../church1/assest/scripts/script.js"></script>
+
     <!-- Required vendors -->
     <script src="./vendor/global/global.min.js"></script>
     <script src="./js/quixnav-init.js"></script>
