--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -23,7 +23,7 @@
         <a href="landing-page.html" class="logo3">Ash.North Treasury Dept.
         <img class="sda_logo" src="./assest/images/sda_logo.png" alt="logo"></a>
         <ul>
-            <li><a id="dashboard"  href="/church1/Admin Dash Board/theme/index.html"> <i class="fa-solid fa-chart-line"></i> Dashboard</a></li>
+            <li><a id="dashboard"  href="../church1/AdminDashBoard/theme/index.html"> <i class="fa-solid fa-chart-line"></i> Dashboard</a></li>
           <li class="dropdown">
             <div id="admin-section" style="display: none;">
                 <a> <i class="fa-solid fa-bars"></i> Menu</a>
