corrected path names

--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -48,7 +48,7 @@
         <label for="check" class="checkbtn">
           <i class="fas fa-bars"></i>
         </label>
-        <a href="landing-page.html" class="logo3">Ash.North Treasury Dept.
+        <a href="../../../church1/landing-page.html" class="logo3">Ash.North Treasury Dept.
         <img class="sda_logo" src="../../../church1/assest/images/sda_logo.png" alt="logo"></a>
         <ul>
             <li><a id="dashboard"  class="active" href="./index.html"> <i class="fa-solid fa-chart-line"></i> Dashboard</a></li>
