--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -910,7 +910,7 @@
                     sessionStorage.removeItem("user-creds");
                     sessionStorage.removeItem("user-info");
                     localStorage.removeItem("amountTableData");
-                    window.location.href = '../../../../index.html';
+                    window.location.href = '../../../index.html';
                     }
                 });
                 });
