Added a side bar for admin dashboard

--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -123,18 +123,21 @@
         <!--**********************************
             Sidebar start
         ***********************************-->
-        <!-- <div class="quixnav">
+        <div class="quixnav">
             <div class="quixnav-scroll">
                 <ul class="metismenu" id="menu">
                     <li class="nav-label first">Main Menu</li>
                     <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i
-                                class="icon icon-single-04"></i><span class="nav-text">Dashboard</span></a>
+                                class="icon icon-chart-bar-33"></i><span class="nav-text">Dashboard</span></a>
                         <ul aria-expanded="false">
                             <li><a href="./index.html">Dashboard 1</a></li>
-                            <li><a href="./index2.html">Dashboard 2</a></li> 
+                            <!-- <li><a href="./index2.html">Dashboard 2</a></li>  -->
+                            <li><a href="./chart-chartjs.html">Dashboard 2</a></li>
                         </ul>
                     </li>
-                    <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i
+
+
+                    <!-- <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i
                         class="icon icon-chart-bar-33"></i><span class="nav-text">Charts</span></a>
                         <ul aria-expanded="false">
                             <li><a href="./chart-flot.html">Flot</a></li>
@@ -256,11 +259,11 @@
                     </li> -->
 
 
-                <!-- </ul>
+                </ul>
             </div>
 
 
-        </div> -->
+        </div>
         <!--**********************************
             Sidebar end
         ***********************************-->
@@ -271,6 +274,14 @@
         <div class="content-body">
             <!-- row -->
             <div class="container-fluid">
+                <!-- <div class="row page-titles mx-0">
+                    <div class="col-sm-6">
+                        <div class="welcome-text">
+                            <h4>Hi Franklin, welcome back!</h4>
+                            <p class="mb-0">Your Income and Expenditure at a glance</p>
+                        </div>
+                    </div>
+                </div> -->
                 <div class="row">
                     <div class="col-lg-3 col-sm-6">
                         <div class="card">
