--- a/church1/AdminDashBoard/theme/chart-chartjs.html
+++ b/church1/AdminDashBoard/theme/chart-chartjs.html
@@ -7,8 +7,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Focus - Bootstrap Admin Dashboard </title>
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon.png">
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon.png"> -->
     <link href="./css/style.css" rel="stylesheet">
+
+
+    <link rel="icon" type="image/icon" href="../../../church1/assest/images/favicon.png">
+    <link rel="stylesheet" href="../../../church1/assest/styles/styles.css" />
+    <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"/> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="../../../church1/assest/scripts/auth.js"></script> 
 
 </head>
 
@@ -28,6 +39,41 @@
         Preloader end
     ********************-->
 
+    <nav>
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+        </label>
+        <a href="../../../church1/landing-page.html" class="logo3">Ash.North Treasury Dept.
+        <img class="sda_logo" src="../../../church1/assest/images/sda_logo.png" alt="logo"></a>
+        <ul>
+            <li><a id="dashboard"  class="active" href="./index.html"> <i class="fa-solid fa-chart-line"></i> Dashboard</a></li>
+          <li class="dropdown">
+            <div id="admin-section" style="display: none;">
+                <a> <i class="fa-solid fa-bars"></i> Menu</a>
+                <div class="dropdown-content">
+                  <a href="../../../church1/income-book.html">Income-Book</a>
+                  <a href="../../../church1/full-view.html">Full View</a>
+                  <a href="../../../church1/expenditure-book.html">Expenditure-Book</a>
+                  <a href="../../../church1/cutoff.html">Cut-Off Sheet</a>
+                  <a href="../../../church1/denominations.html">Denominations</a>
+                </div>
+              </div>
+          </li>
+          <li class="dropdown">
+            <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
+            <div class="dropdown-content">
+              <a href="../../../church1/income-records.html">Income-Records</a>
+              <a href="../../../church1/expenditure-records.html">Expenses-Records</a>
+              <a href="../../../church1/local-records.html">Local-Records</a>
+              <a href="../../../church1/conference-records.html">Conference-Records</a>
+              <a href="../../../church1/district-records.html">District-Records</a>
+            </div>
+          </li>
+          <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
+        </ul>
+      </nav>
+
 
     <!--**********************************
         Main wrapper start
@@ -38,11 +84,11 @@
             Nav header start
         ***********************************-->
         <div class="nav-header">
-            <a href="index.html" class="brand-logo">
+            <!-- <a href="index.html" class="brand-logo">
                 <img class="logo-abbr" src="./images/logo.png" alt="">
                 <img class="logo-compact" src="./images/logo-text.png" alt="">
                 <img class="brand-title" src="./images/logo-text.png" alt="">
-            </a>
+            </a> -->
 
             <div class="nav-control">
                 <div class="hamburger">
@@ -61,100 +107,7 @@
             <div class="header-content">
                 <nav class="navbar navbar-expand">
                     <div class="collapse navbar-collapse justify-content-between">
-                        <div class="header-left">
-                            <div class="search_bar dropdown">
-                                <span class="search_icon p-3 c-pointer" data-toggle="dropdown">
-                                    <i class="mdi mdi-magnify"></i>
-                                </span>
-                                <div class="dropdown-menu p-0 m-0">
-                                    <form>
-                                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-
-                        <ul class="navbar-nav header-right">
-                            <li class="nav-item dropdown notification_dropdown">
-                                <a class="nav-link" href="#" role="button" data-toggle="dropdown">
-                                    <i class="mdi mdi-bell"></i>
-                                    <div class="pulse-css"></div>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    <ul class="list-unstyled">
-                                        <li class="media dropdown-item">
-                                            <span class="success"><i class="ti-user"></i></span>
-                                            <div class="media-body">
-                                                <a href="#">
-                                                    <p><strong>Martin</strong> has added a <strong>customer</strong> Successfully
-                                                    </p>
-                                                </a>
-                                            </div>
-                                            <span class="notify-time">3:20 am</span>
-                                        </li>
-                                        <li class="media dropdown-item">
-                                            <span class="primary"><i class="ti-shopping-cart"></i></span>
-                                            <div class="media-body">
-                                                <a href="#">
-                                                    <p><strong>Jennifer</strong> purchased Light Dashboard 2.0.</p>
-                                                </a>
-                                            </div>
-                                            <span class="notify-time">3:20 am</span>
-                                        </li>
-                                        <li class="media dropdown-item">
-                                            <span class="danger"><i class="ti-bookmark"></i></span>
-                                            <div class="media-body">
-                                                <a href="#">
-                                                    <p><strong>Robin</strong> marked a <strong>ticket</strong> as unsolved.
-                                                    </p>
-                                                </a>
-                                            </div>
-                                            <span class="notify-time">3:20 am</span>
-                                        </li>
-                                        <li class="media dropdown-item">
-                                            <span class="primary"><i class="ti-heart"></i></span>
-                                            <div class="media-body">
-                                                <a href="#">
-                                                    <p><strong>David</strong> purchased Light Dashboard 1.0.</p>
-                                                </a>
-                                            </div>
-                                            <span class="notify-time">3:20 am</span>
-                                        </li>
-                                        <li class="media dropdown-item">
-                                            <span class="success"><i class="ti-image"></i></span>
-                                            <div class="media-body">
-                                                <a href="#">
-                                                    <p><strong> James.</strong> has added a<strong>customer</strong> Successfully
-                                                    </p>
-                                                </a>
-                                            </div>
-                                            <span class="notify-time">3:20 am</span>
-                                        </li>
-                                    </ul>
-                                    <a class="all-notification" href="#">See all notifications <i
-                                            class="ti-arrow-right"></i></a>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown header-profile">
-                                <a class="nav-link" href="#" role="button" data-toggle="dropdown">
-                                    <i class="mdi mdi-account"></i>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    <a href="./app-profile.html" class="dropdown-item">
-                                        <i class="icon-user"></i>
-                                        <span class="ml-2">Profile </span>
-                                    </a>
-                                    <a href="./email-inbox.html" class="dropdown-item">
-                                        <i class="icon-envelope-open"></i>
-                                        <span class="ml-2">Inbox </span>
-                                    </a>
-                                    <a href="./page-login.html" class="dropdown-item">
-                                        <i class="icon-key"></i>
-                                        <span class="ml-2">Logout </span>
-                                    </a>
-                                </div>
-                            </li>
-                        </ul>
+                        
                     </div>
                 </nav>
             </div>
@@ -176,10 +129,11 @@
                                 class="icon icon-single-04"></i><span class="nav-text">Dashboard</span></a>
                         <ul aria-expanded="false">
                             <li><a href="./index.html">Dashboard 1</a></li>
-                            <li><a href="./index2.html">Dashboard 2</a></li></ul>
+                            <!-- <li><a href="./index2.html">Dashboard 2</a></li></ul> -->
+                            <li><a href="./chart-chartjs.html">Dashboard 2</a></li>
                     </li>
                     
-                    <li class="nav-label">Apps</li>
+                    <!-- <li class="nav-label">Apps</li>
                     <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i
                                 class="icon icon-app-store"></i><span class="nav-text">Apps</span></a>
                         <ul aria-expanded="false">
@@ -204,8 +158,13 @@
                             <li><a href="./chart-sparkline.html">Sparkline</a></li>
                             <li><a href="./chart-peity.html">Peity</a></li>
                         </ul>
-                    </li>
-                    <li class="nav-label">Components</li>
+                    </li> -->
+
+
+
+
+
+                    <!-- <li class="nav-label">Components</li>
                     <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i
                                 class="icon icon-world-2"></i><span class="nav-text">Bootstrap</span></a>
                         <ul aria-expanded="false">
@@ -280,7 +239,9 @@
                             </li>
                             <li><a href="./page-lock-screen.html">Lock Screen</a></li>
                         </ul>
-                    </li>
+                    </li> -->
+
+
                 </ul>
             </div>
 
@@ -295,20 +256,21 @@
         ***********************************-->
         <div class="content-body">
             <div class="container-fluid">
-                <div class="row page-titles mx-0">
+                <!-- <div class="row page-titles mx-0">
                     <div class="col-sm-6">
                         <div class="welcome-text">
                             <h4>Hi, welcome back!</h4>
-                            <p class="mb-0">Your business dashboard template</p>
+                            <p class="mb-0">Your Income and Expenditure at a glance</p>
                         </div>
                     </div>
+
                     <div class="col-sm-6 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="javascript:void(0)">Charts</a></li>
                             <li class="breadcrumb-item active"><a href="javascript:void(0)">ChartJS</a></li>
                         </ol>
                     </div>
-                </div>
+                </div> -->
                 <!-- row -->
 
                 <div class="row">
@@ -457,11 +419,11 @@
         <!--**********************************
             Footer start
         ***********************************-->
-        <div class="footer">
+        <!-- <div class="footer">
             <div class="copyright">
                 <p>Copyright © Designed &amp; Developed by <a href="#" target="_blank">Quixkit</a> 2019</p>
             </div>
-        </div>
+        </div> -->
         <!--**********************************
             Footer end
         ***********************************-->
@@ -479,6 +441,18 @@
     <!--**********************************
         Main wrapper end
     ***********************************-->
+
+    <br><br>
+
+    <footer class="footer">
+        <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+        <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
+      </footer>
+
+
+
+
+
 
     <!--**********************************
         Scripts
