Added a show password toggle, and a redirection to index if loged out

--- a/church1/expenditure-book.html
+++ b/church1/expenditure-book.html
@@ -272,6 +272,15 @@ if (duplicateParticulars.length > 0) {
         });
         
     });
+
+    
+// Prevent form submission on Enter key press
+const IncomeTableForm = document.getElementById("incomeTableForm");
+IncomeTableForm.addEventListener("keydown", function(event) {
+    if (event.key === "Enter") {
+        event.preventDefault();
+    }
+});
   </script>
   </body>
 </html>
