--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -287,7 +287,7 @@
                         <div class="card">
                             <div class="stat-widget-two card-body">
                                 <div class="stat-content">
-                                    <div class="stat-text">Total Income for {year} </div>
+                                    <div class="stat-text" id="totalIncomeYear">Total Income for {year} </div>
                                     <!-- Spinner  -->
                                     <div id="spinner1" class="spinner2" style="display: none;">
                                         <i class="fa fa-spinner fa-spin"></i> Loading...
@@ -306,7 +306,7 @@
                         <div class="card">
                             <div class="stat-widget-two card-body">
                                 <div class="stat-content">
-                                    <div class="stat-text" id="totalExpenYear">   </div>
+                                    <div class="stat-text" id="totalExpenYear">  Total Expenditure for {year} </div>
                                     <!-- Spinner  -->
                                     <div id="spinner2" class="spinner2" style="display: none;">
                                         <i class="fa fa-spinner fa-spin"></i> Loading...
@@ -324,7 +324,7 @@
                         <div class="card">
                             <div class="stat-widget-two card-body">
                                 <div class="stat-content">
-                                    <div class="stat-text">Local Income for {year}</div>
+                                    <div class="stat-text" id="localIncomeYear">Local Income for {year}</div>
                                      <!-- Spinner  -->
                                      <div id="spinner3" class="spinner2" style="display: none;">
                                         <i class="fa fa-spinner fa-spin"></i> Loading...
@@ -341,7 +341,7 @@
                         <div class="card">
                             <div class="stat-widget-two card-body">
                                 <div class="stat-content">
-                                    <div class="stat-text">Local Expenditure for {year}</div>
+                                    <div class="stat-text" id="localExpenYear">Local Expenditure for {year}</div>
                                      <!-- Spinner  -->
                                      <div id="spinner4" class="spinner2" style="display: none;">
                                         <i class="fa fa-spinner fa-spin"></i> Loading...
@@ -361,7 +361,7 @@
                     <div class="col-xl-8 col-lg-8 col-md-8">
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title">Income and Expenditure for {year} <span></span></h4>
+                                <h4 class="card-title" id="incomeExpenditureYear">Income and Expenditure for {year} <span></span></h4>
                             </div>
                             <div class="card-body">
                                 <div class="row">
@@ -376,7 +376,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <div class="m-t-10">
-                                    <h4 class="card-title">Current Bal as at {year}</h4>
+                                    <h4 class="card-title" id="currentBalanceYear">Current Bal as at {year}</h4>
                                     <h2 class="mt-3">GH₵1</h2>
                                 </div>
                                 <div class="widget-card-circle mt-5 mb-5" id="info-circle-card">
@@ -923,15 +923,36 @@
     ***********************************-->
     
  <script>
-
+  //Get the current year and update the HTML element 
  document.addEventListener("DOMContentLoaded", () => {
   // Get the current year
   const currentYear = new Date().getFullYear();
 
-  // Update the innerText of the element with id "totalExpenYear"
+  // Update the innerText of the elements of the cards
+  const totalIncomeYearElement = document.getElementById("totalIncomeYear");
   const totalExpenYearElement = document.getElementById("totalExpenYear");
+  const localIcomeYearElement = document.getElementById("localIncomeYear");
+  const localExpenYearElement = document.getElementById("localExpenYear");
+  const incomeExpenditureYearElement = document.getElementById("incomeExpenditureYear");
+  const currentBalanceYearElement = document.getElementById("currentBalanceYear");
+  
+  if (totalIncomeYearElement) {
+      totalIncomeYearElement.innerText = `Total Income for ${currentYear}`;
+  }
   if (totalExpenYearElement) {
-    totalExpenYearElement.innerText = `Total Expenditure for ${currentYear}`;
+      totalExpenYearElement.innerText = `Total Expenditure for ${currentYear}`;
+  }
+  if (localIcomeYearElement) {
+      localIcomeYearElement.innerText = `Local Income for ${currentYear}`;
+  }
+  if (localExpenYearElement) {
+      localExpenYearElement.innerText = `Local Expenditure for ${currentYear}`;
+  }
+  if (incomeExpenditureYearElement) {
+      incomeExpenditureYearElement.innerText = `Income and Expenditure for ${currentYear}`;
+    }
+  if (currentBalanceYearElement) {
+      currentBalanceYearElement.innerText = `Current Balance for ${currentYear}`;
   }
 });
 
@@ -1004,6 +1025,20 @@
       if (spinnerIncome) spinnerIncome.style.display = 'none';
       if (spinnerExpenditure) spinnerExpenditure.style.display = 'none';
     });
+
+
+
+    // Function to check authentication and redirect if not authenticated, this is for the dashboard page
+    // General one exist for the whole app in auth 
+    const checkAuth = () => { 
+      if (!sessionStorage.getItem("user-creds")) {
+        window.location.href = "../../../index.html";
+      }
+    };
+
+ checkAuth();
+
+
 });
 
 
