--- a/church1/income-book.html
+++ b/church1/income-book.html
@@ -364,6 +364,17 @@ const formData = new FormData(form);
       // Hide spinner
       spinner.style.display = 'none';
     });
+
+    
+});
+
+
+// Prevent form submission on Enter key press
+const IncomeTableForm = document.getElementById("incomeTableForm");
+IncomeTableForm.addEventListener("keydown", function(event) {
+    if (event.key === "Enter") {
+        event.preventDefault();
+    }
 });
   </script>
   </body>
