Added redirection to login from admin dashboard when logged out

--- a/church1/AdminDashBoard/theme/chart-chartjs.html
+++ b/church1/AdminDashBoard/theme/chart-chartjs.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Focus - Bootstrap Admin Dashboard </title>
+    <title> Admin Dashboard </title>
     <!-- Favicon icon -->
     <!-- <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon.png"> -->
     <link href="./css/style.css" rel="stylesheet">
@@ -459,6 +459,29 @@
     ***********************************-->
 
     <script>
+
+
+document.addEventListener("DOMContentLoaded", () => {
+  // Get the current year
+  const currentYear = new Date().getFullYear();
+
+
+  
+
+
+// Function to check authentication and redirect if not authenticated, this is for the dashboard page
+    // General one exist for the whole app in auth 
+    const checkAuth = () => { 
+      if (!sessionStorage.getItem("user-creds")) {
+        window.location.href = "../../../index.html";
+      }
+    };
+
+ checkAuth();
+
+});
+
+
         //Just for log out button
          const logOutButton = document.getElementById('log-out');
             if (logOutButton) {
