--- a/church1/expenditure-records.html
+++ b/church1/expenditure-records.html
@@ -13,6 +13,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="./assest/scripts/auth.js"></script> 
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.2.2/css/fixedColumns.dataTables.min.css">
+    <script src="https://cdn.datatables.net/fixedcolumns/4.2.2/js/dataTables.fixedColumns.min.js"></script>
+
 </head>
 <body>
     <nav>
@@ -115,9 +119,16 @@
                         tableBody.appendChild(tr);
                     });
                     $('#dataTable').DataTable({
-                        "order": [[ 0, "desc" ]], // Order by the first column (NUM) in descending order
-                        "pageLength": 10, // Set the number of rows per page
-                        "lengthMenu": [5, 10, 25, 50, 100, 200] // Options for number of rows per page
+                        scrollX: true, // Enable horizontal scrolling
+                        scrollCollapse: true, // Allow the table to shrink when fewer rows are displayed
+                        paging: true, // Enable pagination
+                        fixedColumns: {
+                            leftColumns: 1, // Freeze the first column (Date_Column)
+                            rightColumns: 1 // Freeze the last column (Total)
+                        },
+                        order: [[0, "desc"]], // Order by the first column (NUM) in descending order
+                        pageLength: 10, // Set the number of rows per page
+                        lengthMenu: [5, 10, 25, 50, 100, 200] // Options for number of rows per page
                     });
                 })
                 .catch(error => console.error('Error fetching data:', error))
