--- a/church1/expenditure-records.html
+++ b/church1/expenditure-records.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.2.2/css/fixedColumns.dataTables.min.css">
     <script src="https://cdn.datatables.net/fixedcolumns/4.2.2/js/dataTables.fixedColumns.min.js"></script>
 
+    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.3.2/css/fixedHeader.dataTables.min.css">
+<script src="https://cdn.datatables.net/fixedheader/3.3.2/js/dataTables.fixedHeader.min.js"></script> -->
+
 </head>
 <body>
     <nav>
@@ -120,12 +123,14 @@
                     });
                     $('#dataTable').DataTable({
                         scrollX: true, // Enable horizontal scrolling
+                        scrollY: "60vh", // Enable vertical scrolling with a height of 60% of the viewport
                         scrollCollapse: true, // Allow the table to shrink when fewer rows are displayed
                         paging: true, // Enable pagination
                         fixedColumns: {
                             leftColumns: 1, // Freeze the first column (Date_Column)
                             rightColumns: 1 // Freeze the last column (Total)
                         },
+                        // fixedHeader: true, // Enable fixed headers
                         order: [[0, "desc"]], // Order by the first column (NUM) in descending order
                         pageLength: 10, // Set the number of rows per page
                         lengthMenu: [5, 10, 25, 50, 100, 200] // Options for number of rows per page
